--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
-    "sass": "^1.51.0"
+    "nodemon": "^2.0.16",
+    "sass": "^1.51.0",
+    "to": "^0.2.9",
+    "update": "^0.7.4"
   }
 }
